# boto3-errors

./: .gitignore  .last-botocore-check  README.md  prek.toml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/actions/install-python-env/: action.yml
.github/workflows/: auto-tag.yml  ci.yml  publish.yml  track-botocore.yml
scripts/: generate.py
src/boto3_errors/: __init__.py  _base.py  _patch.py  accessanalyzer.py  account.py  acm.py  acm_pca.py  aiops.py  alexaforbusiness.py  amp.py  amplify.py  amplifybackend.py  amplifyuibuilder.py  apigateway.py  apigatewaymanagementapi.py  apigatewayv2.py  appconfig.py  appconfigdata.py  appfabric.py  appflow.py  appintegrations.py  application_autoscaling.py  application_insights.py  application_signals.py  applicationcostprofiler.py  appmesh.py  apprunner.py  appstream.py  appsync.py  arc_region_switch.py  arc_zonal_shift.py  artifact.py  athena.py  auditmanager.py  autoscaling.py  autoscaling_plans.py  b2bi.py  backup.py  backup_gateway.py  backupsearch.py  (+415 more)
tests/: test_base.py  test_dynamodb.py  test_integration_dynamodb.py  test_patch.py
